--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8"
 openpyxl = "^3.0.9"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.3"
